Remove unused dependencies

--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
   "name": "@tokenfoundry/state-machine",
   "version": "1.0.0",
   "description": "Solidity framework to implement a state machine pattern.",
+  "repository": "https://github.com/tokenfoundry/state-machine.git",
+  "license": "MIT",
+  "author": {
+    "email": "vicente.dragicevic@consensys.net",
+    "name": "Vicente Dragicevic"
+  },
   "scripts": {
     "lint": "eslint .",
+    "test": "truffle test",
     "coverage": "solidity-coverage",
     "generate-wallet": "node ./scripts/generateWallet.js",
     "get-private-key": "node ./scripts/getPrivateKey.js"
-  },
-  "directories": {
-    "test": "test"
   },
   "devDependencies": {
     "babel-eslint": "^8.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
     "bluebird": "^3.5.1",
     "eslint": "^4.14.0",
@@ -36,15 +38,5 @@
     "presets": [
       "env"
     ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tokenfoundry/state-machine.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/tokenfoundry/state-machine/issues"
-  },
-  "homepage": "https://github.com/tokenfoundry/state-machine#readme"
+  }
 }
