--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "bluebird": "^3.5.1",
+    "coveralls": "^3.0.0",
     "eslint": "^4.14.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-babel": "^4.1.2",
